<resources>
    <string name="app_name">Weather+</string>
    <string name="mainHeader">Choose the city</string>
    <string name="city">Zadar</string>
    <string name="mainButton">Show weather</string>
    <string name="temperature">°C</string>
    <string name="windSpeed">m/s</string>
    <string name="pressure">mm Hg.</string>
    <string name="textWindSpeed">Wind speed</string>
    <string name="textPressure">Air pressure</string>
    <string name="textCity">City</string>
    <string name="textSettings">Settings</string>
    <string name="darkTheme">Dark theme</string>
    <string name="textLanguage">Language</string>
    <string name="wikiRegion">https://en.</string>
    <string name="cityInfoButton">About this city</string>
    <string name="textWeather">Current weather in</string>
    <string name="error">Some problem appeared</string>
    <string name="menuAdd">Add city</string>
    <string name="menuSettings">Settings</string>
    <string name="menuRemove">Remove city</string>
    <string name="alert_retry">Retry</string>
    <string name="alert_back">Back</string>
    <string name="text_weather_visualisation">weather visualisation</string>
    <string name="humidity">%</string>
    <string name="weather_info">Clear</string>
    <string name="error_empty_city">City name cannot be empty!</string>
    <string name="internet_lost">The internet connection is lost</string>
    <string name="same_word">The same city is already in the list</string>
    <string name="open_city">Offered cities</string>
</resources>