<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuRemove"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="10"
        android:title="@string/menuRemove"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuAdd"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="20"
        android:title="@string/menuAdd"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuSettings"
        android:icon="@android:drawable/ic_menu_manage"
        android:orderInCategory="30"
        android:title="@string/menuSettings"
        app:showAsAction="ifRoom" />
</menu>
