<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weatherCardConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherCardActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/weatherImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textCity"
        app:layout_constraintStart_toEndOf="@id/textTemperature"
        android:layout_marginStart="40dp"
        android:contentDescription="@string/textWeather" />

    <TextView
        android:id="@+id/mainHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textWeather"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/DefaultHeader"/>

    <TextView
        android:id="@+id/textCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DefaultHeader"
        android:text="@string/city"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.267"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainHeader" />

    <TextView
        android:id="@+id/textTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DefaultElement"
        android:text="@string/temperature"
        app:layout_constraintStart_toStartOf="@+id/textCity"
        app:layout_constraintTop_toBottomOf="@+id/textCity" />

    <TextView
        android:id="@+id/textWindSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DefaultElement"
        android:text="@string/windSpeed"
        app:layout_constraintStart_toStartOf="@+id/textCity"
        app:layout_constraintTop_toBottomOf="@+id/textTemperature" />

    <TextView
        android:id="@+id/textPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DefaultElement"
        android:text="@string/pressure"
        app:layout_constraintStart_toStartOf="@+id/textCity"
        app:layout_constraintTop_toBottomOf="@+id/textWindSpeed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAboutCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DefaultBottom"
        android:text="@string/cityInfoButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>