<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/weatherCompImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/text_weather_visualisation" />

    <TextView
        android:id="@+id/textHumidity"
        style="@style/DefaultElement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/humidity"
        app:layout_constraintBottom_toBottomOf="@+id/weatherCompImage"
        app:layout_constraintStart_toEndOf="@id/weatherCompImage"
        app:layout_constraintTop_toTopOf="@+id/weatherCompImage"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/textWeatherInfo"
        style="@style/DefaultElement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/weather_info"
        app:layout_constraintStart_toStartOf="@id/textHumidity"
        app:layout_constraintTop_toBottomOf="@+id/textHumidity" />


</androidx.constraintlayout.widget.ConstraintLayout>