<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/choosingConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainHeader"
        style="@style/DefaultHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainHeader"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mainButton"
        style="@style/DefaultBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/cbWindSpeed"
        style="@style/DefaultElement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textWindSpeed"
        app:layout_constraintBottom_toTopOf="@+id/mainButton"
        app:layout_constraintEnd_toEndOf="@+id/mainButton"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/mainButton"
        app:layout_constraintVertical_bias="0.976" />

    <CheckBox
        android:id="@+id/cbPressure"
        style="@style/DefaultElement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textPressure"
        app:layout_constraintBottom_toTopOf="@+id/cbWindSpeed"
        app:layout_constraintStart_toStartOf="@+id/cbWindSpeed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutTextCity"
        style="@style/DefaultHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainHeader">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCity"
            style="@style/DefaultElement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:hint="@string/textCity"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/cbPressure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutTextCity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/spinCities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <ImageView
        android:id="@+id/btnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/textSettings"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/mainButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toEndOf="@+id/mainButton"
        app:layout_constraintTop_toTopOf="@+id/mainButton"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_preferences" />

</androidx.constraintlayout.widget.ConstraintLayout>